Fixed an issue that caused the social icons to be clicked when animating in. also they now animate in from behind the avatar.

--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -1,4 +1,3 @@
-
 .hero-container {
   min-height: 95vh;
 
@@ -21,6 +20,8 @@
   border-radius: 50%;
   overflow: hidden;
   user-select: none;
+  z-index: 1;
+  position: relative;
 }
 
 .hero-img-wrapper img {
@@ -68,12 +69,11 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  pointer-events: none; /* So avatar click still registers */
+  z-index: 0;
 }
 
 .hero-icons-container .hero-icon {
     position: absolute;
-    pointer-events: auto;
     cursor: pointer;
     background-color: var(--color-slate100);
     padding: 0.4em;
